@@ -49,6 +49,7 @@ Improved Scale 0.75 function: now it has antialias
 Improved Cpu Transaction Log: now logfiles can be rotated automatically
 
 
+Fixed Pentagon interrupt handling: now effects on border and hi-res work almost perfect!
 Fixed "Jeff Braine" manufacturer to "New Horizons". Changed Prism machine name to "Prism 512"
 Fixed bug having more than 256 text to adventure keyboard words
 Fixed bug on CPC vertical scrolling
